tests/facebook_fbt_none/facebook_fbt_none.exp
Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ React element `fbt`
  4: (<fbt />: number); // Error: ReactElement ~> number
               ^^^^^^ number. This type is incompatible with
                                                                  v-
158: declare type React$Element<ElementType: React$ElementType> = {|
159:   +type: ElementType;
160:   +props: React$ElementProps<ElementType>;
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158


Found 1 error
